--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2_console
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
